fix: id logo into logo-container and add #logo-top-left , properties into #login and .accedi-top-left: text align

--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,17 @@ nav {
 
 }
 
-#logo{
+#logo-container{
 width: 100px;
 height: 70px;
 background: green;
 }
 /* test */
+
+#logo-top-left{
+    width: 100px;
+    padding: 10px;
+}
 
 #links {
     height: 70px;
@@ -46,6 +51,12 @@ background: green;
     height: 70px;
     width: 100px;
     background-color: rgb(245, 65, 245);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding: 10px 0;
+   
 }
 /* test */
 
@@ -56,7 +67,7 @@ background: green;
 
 li {
     height: 20px;
-    width: 40px;
+    
     background-color: brown;
 }
 /* test */
@@ -68,8 +79,15 @@ li {
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    color: white;
 }
 /* test */
+
+.accedi-top-left{
+    text-align: left;
+    
+
+}
 
 
 #header-centered {
